--- a/templates/list-orders.html
+++ b/templates/list-orders.html
@@ -67,7 +67,7 @@
     <tr>
       <td>{{ item|pk }}</td>
       <td>{{ item.created_at }}</td>
-      <td>{{ item.user }}</td>
+      <td>{{ item.user.first_name }} {{ item.user.last_name }}</td>
       <td>{{ item.status }}</td>
       <td>{{ item.totalPrice }}</td>
       <td>{{ item.isDelivered }}</td>
