--- a/templates/list-orders.html
+++ b/templates/list-orders.html
@@ -57,6 +57,7 @@
       <th>Order ID</th>
       <th>Date</th>
       <th>Customer</th>
+      <th>Address</th>
       <th>Status</th>
       <th>Total Price</th>
       <th>Delivered</th>
@@ -64,14 +65,17 @@
   </thead>
   <tbody>
     {% for item in data %}
+    {% for shipping_address in order.shippingaddress_set.all %}
     <tr>
       <td>{{ item|pk }}</td>
       <td>{{ item.created_at }}</td>
       <td>{{ item.user.first_name }} {{ item.user.last_name }}</td>
+      <td>{{ shipping_address.address }}</td>
       <td>{{ item.status }}</td>
       <td>{{ item.totalPrice }}</td>
       <td>{{ item.isDelivered }}</td>
     </tr>
+    {% endfor %}
     {% endfor %}
   </tbody>
 </table>
