--- a/templates/base-xyno.html
+++ b/templates/base-xyno.html
@@ -92,6 +92,13 @@
               </li>
 
               <li class="nav-item">
+                <a href="/" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>UPI Confirmations</p>
+                </a>
+              </li>
+
+              <li class="nav-item">
                 <a href="/customers/" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Customer Info</p>
