--- a/templates/base-xyno.html
+++ b/templates/base-xyno.html
@@ -92,7 +92,7 @@
               </li>
 
               <li class="nav-item">
-                <a href="/" class="nav-link">
+                <a href="/confirm-upi/" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>UPI Confirmations</p>
                 </a>
