--- a/templates/customer-profile.html
+++ b/templates/customer-profile.html
@@ -50,7 +50,7 @@ function deleteOrder(orderid){
       </tr>
 
       <tr>
-        <td>Customer GSITN:</td>
+        <td>Customer GSTIN:</td>
         <td>{{ cust.customer_gstin|default_if_none:"" }}</td>
       </tr>
     </table>
