--- a/templates/list-upi.html
+++ b/templates/list-upi.html
@@ -29,6 +29,10 @@
       }
     }
 
+    function showmodal(){
+      $("#myModal").modal('show');
+    }
+
   $(document).ready(function() {
 
     $.fn.dataTable.moment('MMM DD, YYYY');
@@ -75,7 +79,7 @@
       <td>UPI Unconfirmed</td>
       <td>{{ item.totalPrice }}</td>
       <td>
-        <button class="btn btn-primary">Confirm Payment</button>
+        <button class="btn btn-primary" onclick="showmodal()">Confirm Payment</button>
       </td>
     </tr>
 
@@ -84,4 +88,31 @@
 </table>
 
 </div>
+
+
+  <!-- The Modal -->
+  <div class="modal" id="myModal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+
+        <!-- Modal Header -->
+        <div class="modal-header">
+          <h4 class="modal-title">Edit Info</h4>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+
+        <!-- Modal body -->
+        <div>
+          <form id="form2" method="post">
+            <table class="modal-body">
+
+            </table>
+          </form>
+
+          <button type="button" class="btn btn-info rightp" onclick=submitform()>Submit</button>
+        </div>
+
+      </div>
+    </div>
+  </div>
 {% endblock %}
