--- a/templates/list-upi.html
+++ b/templates/list-upi.html
@@ -10,31 +10,36 @@
 <script type="text/javascript">
 
 
-  function deleteOrder(billid){
-    var result = confirm("Are you sure you want to delete Bill #"+billid+"?");
+  function deleteOrder(billid) {
+    var result = confirm("Are you sure you want to delete Bill #" + billid + "?");
 
     if (result) {
-        stuff = {
-          'status':'Bill Cancelled',
-          'csrfmiddlewaretoken': '{{ csrf_token }}'
-        }
-        $.ajax({
-          type: "POST",
-          url: "/cash-invoice/bill/"+billid+"/",
-          data: stuff,
-          success: function(data) {
-            location.reload();
-          }
-        });
+      stuff = {
+        'status': 'Bill Cancelled',
+        'csrfmiddlewaretoken': '{{ csrf_token }}'
       }
-    }
-
-    function showmodal(){
       $.ajax({
+        type: "POST",
+        url: "/cash-invoice/bill/" + billid + "/",
+        data: stuff,
+        success: function (data) {
+          location.reload();
+        }
+      });
+    }
+  }
+
+  function showmodal() {
+    $.ajax({
       type: "GET",
       url: "https://api.manxho.co.in/api/users/order/138/",
+      headers: {
+        'X-CSRFToken': '{{ csrf_token }}',
+        'X-Requested-With': 'XMLHttpRequest',
+        'Cookie': document.cookie
+      },
       dataType: "json",
-      success: function(data) {
+      success: function (data) {
         // Create table headers
         var table = "<table><thead><tr><th>Name</th><th>Phone</th><th>Email</th><th>Order ID</th><th>Order Items</th><th>Price</th><th>Delivery Price</th><th>Total Price</th></tr></thead>";
         // Get user info
@@ -61,9 +66,9 @@
         $("#order-modal").modal("show");
       }
     });
-    }
+  }
 
-  $(document).ready(function() {
+  $(document).ready(function () {
 
     $.fn.dataTable.moment('MMM DD, YYYY');
     $('#tblx').DataTable({
@@ -87,64 +92,64 @@
 </h2>
 
 <div>
-<table border="1" style="background-color: white;" id="tblx" class="table table-striped table-bordered">
-  <thead>
-    <tr>
-      <th>Order ID</th>
-      <th>Date</th>
-      <th>Customer</th>
-  
-      <th>Status</th>
-      <th>Total Price</th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for item in data %}
+  <table border="1" style="background-color: white;" id="tblx" class="table table-striped table-bordered">
+    <thead>
+      <tr>
+        <th>Order ID</th>
+        <th>Date</th>
+        <th>Customer</th>
 
-    <tr>
-      <td>{{ item|pk }}</td>
-      <td>{{ item.created_at }}</td>
-      <td>{{ item.user.first_name }} {{ item.user.last_name }}</td>
-   
+        <th>Status</th>
+        <th>Total Price</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for item in data %}
 
-      <td>UPI Unconfirmed</td>
-      <td>{{ item.totalPrice }}</td>
-      <td>
-        <button class="btn btn-primary" onclick="showmodal()">Confirm Payment</button>
-      </td>
-    </tr>
+      <tr>
+        <td>{{ item|pk }}</td>
+        <td>{{ item.created_at }}</td>
+        <td>{{ item.user.first_name }} {{ item.user.last_name }}</td>
 
-    {% endfor %}
-  </tbody>
-</table>
+
+        <td>UPI Unconfirmed</td>
+        <td>{{ item.totalPrice }}</td>
+        <td>
+          <button class="btn btn-primary" onclick="showmodal()">Confirm Payment</button>
+        </td>
+      </tr>
+
+      {% endfor %}
+    </tbody>
+  </table>
 
 </div>
 
 
-  <!-- The Modal -->
-  <div class="modal" id="order-modal">
-    <div class="modal-dialog">
-      <div class="modal-content">
+<!-- The Modal -->
+<div class="modal" id="order-modal">
+  <div class="modal-dialog">
+    <div class="modal-content">
 
-        <!-- Modal Header -->
-        <div class="modal-header">
-          <h4 class="modal-title">Edit Info</h4>
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-        </div>
-
-        <!-- Modal body -->
-        <div>
-          <form id="form2" method="post">
-            <div id="order-modal-body">
-
-            </div>
-          </form>
-
-          <button type="button" class="btn btn-info rightp" onclick=submitform()>Submit</button>
-        </div>
-
+      <!-- Modal Header -->
+      <div class="modal-header">
+        <h4 class="modal-title">Edit Info</h4>
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
       </div>
+
+      <!-- Modal body -->
+      <div>
+        <form id="form2" method="post">
+          <div id="order-modal-body">
+
+          </div>
+        </form>
+
+        <button type="button" class="btn btn-info rightp" onclick=submitform()>Submit</button>
+      </div>
+
     </div>
   </div>
+</div>
 {% endblock %}
