--- a/templates/list-upi.html
+++ b/templates/list-upi.html
@@ -34,7 +34,7 @@
       type: "GET",
       url: "https://api.manxho.co.in/api/users/order/138/",
       xhrFields: {
-        withCredentials: true # <----
+        withCredentials: true
       }
   dataType: "json",
     success: function (data) {
