--- a/templates/list-upi.html
+++ b/templates/list-upi.html
@@ -32,7 +32,7 @@
   function showmodal() {
     $.ajax({
       type: "GET",
-      url: "https://api.manxho.co.in/api/users/order/138/",
+      url: "https://dashboard.manxho.co.in/api/users/order/138/",
       xhrFields: {
         withCredentials: true
       },
