--- a/templates/list-upi.html
+++ b/templates/list-upi.html
@@ -53,11 +53,11 @@
         var totalPrice = parseFloat(price) + parseFloat(deliveryPrice);
         // Create table rows
         var row = "<tr><td>Name:" + name + "</td></tr><tr><td>Phone: " + 
-          phone + "</td></tr><tr><td>Email:" + email + "</td></tr><tr><td>OrderId" + orderId + "</td></tr><tr><td>";
+          phone + "</td></tr><tr><td>Email: " + email + "</td></tr><tr><td>OrderId: " + orderId + "</td></tr><tr><td>";
         for (var i = 0; i < orderItems.length; i++) {
-          row += orderItems[i].name + " - $" + orderItems[i].price + "<br>";
+          row += orderItems[i].name + " - Rs. " + orderItems[i].price + "<br>";
         }
-        row += "</td><td>" + price + "</td><td>" + deliveryPrice + "</td><td>" + totalPrice + "</td></tr>";
+        row += "</td></tr><tr><td>Item Price: " + price + "</td></tr><tr><td>Delivery Price: " + deliveryPrice + "</td></tr><tr><td>Total Price: " + totalPrice + "</td></tr>";
         // Add rows to table
         table += row + "</table>";
         // Display table in modal
