--- a/templates/list-orders.html
+++ b/templates/list-orders.html
@@ -9,7 +9,7 @@
 
 <script type="text/javascript">
 
-function showmodal(id) {
+  function showmodal(id) {
     $.ajax({
       type: "GET",
       url: `https://dashboard.manxho.co.in/api/users/order/${id}/`,
@@ -32,12 +32,13 @@ function showmodal(id) {
         var deliveryPrice = data.shippingPrice;
         var totalPrice = parseFloat(price) + parseFloat(deliveryPrice);
         // Create table rows
-        var row = "<tr><td>Name:</td><td> " + name + "</td></tr><tr><td>Phone: </td><td> " + 
+        var row = "<tr><td>Name:</td><td> " + name + "</td></tr><tr><td>Phone: </td><td> " +
           phone + "</td></tr><tr><td>Email: </td><td> " + email + "</td></tr><tr><td>OrderId: </td><td> " + orderId + "</td></tr>";
         for (var i = 0; i < orderItems.length; i++) {
-          row += " <tr><td>"+ orderItems[i].name + " </td><td>  Rs. " + orderItems[i].price + "</td></tr>";
+          row += "<b> <tr class='data'><td>" + orderItems[i].name + " </td><td>  Rs. " + orderItems[i].price + "</td></tr> </b>";
         }
-        row += "</td></tr><tr><td>Item Price: </td><td> " + price + "</td></tr><tr><td>Delivery Price: </td><td> " + deliveryPrice + "</td></tr><tr><td>Total Price: </td><td> " + totalPrice + "</td></tr>";
+        row += "</td></tr><tr><td>Item Price: </td><td> Rs. " + price + "</td></tr><tr><td>Delivery Price: </td><td> Rs. " + deliveryPrice + "</td></tr><tr><td>Total Price: </td><td> Rs. " + totalPrice + "</td></tr>";
+
         // Add rows to table
         table += row + "</table>";
         // Display table in modal
@@ -49,26 +50,26 @@ function showmodal(id) {
 
 
 
-  function deleteOrder(billid){
-    var result = confirm("Are you sure you want to delete Bill #"+billid+"?");
+  function deleteOrder(billid) {
+    var result = confirm("Are you sure you want to delete Bill #" + billid + "?");
 
     if (result) {
-        stuff = {
-          'status':'Bill Cancelled',
-          'csrfmiddlewaretoken': '{{ csrf_token }}'
-        }
-        $.ajax({
-          type: "POST",
-          url: "/cash-invoice/bill/"+billid+"/",
-          data: stuff,
-          success: function(data) {
-            location.reload();
-          }
-        });
+      stuff = {
+        'status': 'Bill Cancelled',
+        'csrfmiddlewaretoken': '{{ csrf_token }}'
       }
+      $.ajax({
+        type: "POST",
+        url: "/cash-invoice/bill/" + billid + "/",
+        data: stuff,
+        success: function (data) {
+          location.reload();
+        }
+      });
     }
+  }
 
-  $(document).ready(function() {
+  $(document).ready(function () {
 
     $.fn.dataTable.moment('MMM DD, YYYY');
     $('#tblx').DataTable({
@@ -79,9 +80,17 @@ function showmodal(id) {
       ],
     });
 
-   
+
   });
 </script>
+
+<style>
+
+  .data, .data td {
+    border: 1px solid #444;
+  }
+  
+  </style>
 
 {% endblock %}
 
@@ -92,36 +101,37 @@ function showmodal(id) {
 </h2>
 
 <div>
-<table border="1" style="background-color: white;" id="tblx" class="table table-striped table-bordered">
-  <thead>
-    <tr>
-      <th>Order ID</th>
-      <th>Date</th>
-      <th>Customer</th>
-      <th>Phone</th>
-      <th>Address</th>
-      <th>Status</th>
-      <th>Total Price</th>
-      <th>Delivery Info</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for item in data %}
+  <table border="1" style="background-color: white;" id="tblx" class="table table-striped table-bordered">
+    <thead>
+      <tr>
+        <th>Order ID</th>
+        <th>Date</th>
+        <th>Customer</th>
+        <th>Phone</th>
+        <th>Address</th>
+        <th>Status</th>
+        <th>Total Price</th>
+        <th>Delivery Info</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for item in data %}
 
-    <tr>
-      <td onclick=showmodal({{ item|pk }}) style="color: blue">{{ item|pk }}</td>
-      <td>{{ item.created_at }}</td>
-      <td>{{ item.user.first_name }} {{ item.user.last_name }}</td>
-      <td>{{ item.shippingaddress.phone_number }}</td>
-      <td>{{ item.shippingaddress.address }},<br> {{ item.shippingaddress.city }}, {{ item.shippingaddress.state }}</td>
-      <td>{{ item.status }}</td>
-      <td>{{ item.totalPrice }}</td>
-      <td>{{ item.courierInfo }}{% if item.isDelivered %}<br>Delivered{% endif %} </td>
-    </tr>
+      <tr>
+        <td onclick=showmodal({{ item|pk }}) style="color: blue">{{ item|pk }}</td>
+        <td>{{ item.created_at }}</td>
+        <td>{{ item.user.first_name }} {{ item.user.last_name }}</td>
+        <td>{{ item.shippingaddress.phone_number }}</td>
+        <td>{{ item.shippingaddress.address }},<br> {{ item.shippingaddress.city }}, {{ item.shippingaddress.state }}
+        </td>
+        <td>{{ item.status }}</td>
+        <td>{{ item.totalPrice }}</td>
+        <td>{{ item.courierInfo }}{% if item.isDelivered %}<br>Delivered{% endif %} </td>
+      </tr>
 
-    {% endfor %}
-  </tbody>
-</table>
+      {% endfor %}
+    </tbody>
+  </table>
 
 </div>
 
