--- a/templates/list-upi.html
+++ b/templates/list-upi.html
@@ -56,9 +56,9 @@
         var row = "<tr><td>Name:</td><td> " + name + "</td></tr><tr><td>Phone: </td><td> " + 
           phone + "</td></tr><tr><td>Email: </td><td> " + email + "</td></tr><tr><td>OrderId: </td><td> " + orderId + "</td></tr>";
         for (var i = 0; i < orderItems.length; i++) {
-          row += " <tr><td>"+  orderItems[i].name + " </td><td>  Rs. " + orderItems[i].price + "</td></tr>";
+          row += " <b><tr class='data'><td>"+  orderItems[i].name + " </td><td>  Rs. " + orderItems[i].price + "</td></tr></b>";
         }
-        row += "</td></tr><tr><td>Item Price: </td><td> " + price + "</td></tr><tr><td>Delivery Price: </td><td> " + deliveryPrice + "</td></tr><tr><td>Total Price: </td><td> " + totalPrice + "</td></tr>";
+        row += "</td></tr><tr><td>Item Price: </td><td> Rs. " +  price + "</td></tr><tr><td>Delivery Price: </td><td> Rs. " + deliveryPrice + "</td></tr><tr><td>Total Price: </td><td> Rs. " + totalPrice + "</td></tr>";
         // Add rows to table
         table += row + "</table>";
         // Display table in modal
@@ -80,9 +80,15 @@
     });
   });
 
-
 </script>
 
+<style>
+
+.data, .data td {
+  border: 1px solid #444;
+}
+
+</style>
 {% endblock %}
 
 {% block maindiv %}
