--- a/templates/list-upi.html
+++ b/templates/list-upi.html
@@ -53,14 +53,15 @@
         var deliveryPrice = data.shippingPrice;
         var totalPrice = parseFloat(price) + parseFloat(deliveryPrice);
         // Create table rows
-        var row = "<tr><td>Name:</td><td> " + name + "</td></tr><tr><td>Phone: </td><td> " + 
+        var row = "<tr><td>Name:</td><td> " + name + "</td></tr><tr><td>Phone: </td><td> " +
           phone + "</td></tr><tr><td>Email: </td><td> " + email + "</td></tr><tr><td>OrderId: </td><td> " + orderId + "</td></tr>";
         for (var i = 0; i < orderItems.length; i++) {
-          row += " <b><tr class='data'><td>"+  orderItems[i].name + " </td><td>  Rs. " + orderItems[i].price + "</td></tr></b>";
+          row += " <b><tr class='data'><td>" + orderItems[i].name + " </td><td>  Rs. " + orderItems[i].price + "</td></tr></b>";
         }
-        row += "</td></tr><tr><td>Item Price: </td><td> Rs. " +  price + "</td></tr><tr><td>Delivery Price: </td><td> Rs. " + deliveryPrice + "</td></tr><tr><td>Total Price: </td><td> Rs. " + totalPrice + "</td></tr>";
+        row += "</td></tr><tr><td>Item Price: </td><td> Rs. " + price + "</td></tr><tr><td>Delivery Price: </td><td> Rs. " + deliveryPrice + "</td></tr><tr><td>Total Price: </td><td> Rs. " + totalPrice + "</td></tr>";
         // Add rows to table
         table += row + "</table>";
+        table += "Transaction ID: <input type='text' id='txid' value='' /> <input type='hidden' id='oid' value='" + orderId + "'/>"
         // Display table in modal
         $("#order-modal-body").html(table);
         $("#order-modal").modal("show");
@@ -68,26 +69,46 @@
     });
   }
 
+
+  function submitform() {
+    $.ajax({
+      type: "POST",
+      url: `https://dashboard.manxho.co.in/api/edit_order/`,
+      xhrFields: {
+        withCredentials: true
+      },
+      data: {
+       transactionId: $('#txid').val();
+       order_id: $('#oid').val();
+      },
+      dataType: "json",
+      success: function (data) {
+          $('#form2').submit();
+      }
+    });
+  }
+
+
+
   $(document).ready(function () {
 
-    $.fn.dataTable.moment('MMM DD, YYYY');
-    $('#tblx').DataTable({
-      'iDisplayLength': 500,
-      "lengthMenu": [10, 25, 50, 75, 100, 500, 1000],
-      'order': [
-        [0, 'desc']
-      ],
-    });
-  });
+        $.fn.dataTable.moment('MMM DD, YYYY');
+        $('#tblx').DataTable({
+          'iDisplayLength': 500,
+          "lengthMenu": [10, 25, 50, 75, 100, 500, 1000],
+          'order': [
+            [0, 'desc']
+          ],
+        });
+      });
 
 </script>
 
 <style>
-
-.data, .data td {
-  border: 1px solid #444;
-}
-
+  .data,
+  .data td {
+    border: 1px solid #444;
+  }
 </style>
 {% endblock %}
 
