--- a/templates/list-upi.html
+++ b/templates/list-upi.html
@@ -61,7 +61,7 @@
         row += "</td></tr><tr><td>Item Price: </td><td> Rs. " + price + "</td></tr><tr><td>Delivery Price: </td><td> Rs. " + deliveryPrice + "</td></tr><tr><td>Total Price: </td><td> Rs. " + totalPrice + "</td></tr>";
         // Add rows to table
         table += row + "</table>";
-        table += "Transaction ID: <input type='text' id='txid' value='' /> <input type='hidden' id='oid' value='" + orderId + "'/>"
+        table += "<br>Transaction ID: <input type='text' id='txid' value='' /> <input type='hidden' id='oid' value='" + orderId + "'/>";
         // Display table in modal
         $("#order-modal-body").html(table);
         $("#order-modal").modal("show");
@@ -78,8 +78,8 @@
         withCredentials: true
       },
       data: {
-       transactionId: $('#txid').val();
-       order_id: $('#oid').val();
+       "transactionId": $('#txid').val();
+       "order_id": $('#oid').val();
       },
       dataType: "json",
       success: function (data) {
