--- a/templates/list-upi.html
+++ b/templates/list-upi.html
@@ -78,8 +78,8 @@
         withCredentials: true
       },
       data: {
-       "transactionId": $('#txid').val();
-       "order_id": $('#oid').val();
+       "transactionId": $('#txid').val(),
+       "order_id": $('#oid').val(),
       },
       dataType: "json",
       success: function (data) {
