--- a/templates/list-orders.html
+++ b/templates/list-orders.html
@@ -155,7 +155,7 @@
           </div>
         </form>
 
-        <button type="button" class="btn btn-info rightp" onclick=submitform()>Confirm Payment</button>
+        <button type="button" class="btn btn-info rightp" onclick=submitform()>Update Order</button>
       </div>
 
     </div>
