--- a/templates/list-upi.html
+++ b/templates/list-upi.html
@@ -79,7 +79,7 @@
         
       },
       headers: {
-        "X-CSRFToken": csrftoken
+        'csrfmiddlewaretoken': csrftoken
       },
       data: {
        "transactionId": $('#txid').val(),
