--- a/templates/list-upi.html
+++ b/templates/list-upi.html
@@ -83,7 +83,7 @@
       data: {
         "csrfmiddlewaretoken": csrftoken,
         "transactionId": $('#txid').val(),
-        "order_id": $('#oid').val(),
+        "order_id": id
       },
       dataType: "json",
       success: function (data) {
