--- a/templates/list-upi.html
+++ b/templates/list-upi.html
@@ -73,10 +73,7 @@
   function submitform(id) {
     $.ajax({
       type: "POST",
-      url: `https://dashboard.manxho.co.in/api/edit_order/`,
-      xhrFields: {
-        withCredentials: true,
-      },
+      url: 'https://dashboard.manxho.co.in/api/edit_order/',
       headers: {
         "X-CSRFToken": csrftoken
       },
