--- a/templates/list-upi.html
+++ b/templates/list-upi.html
@@ -75,7 +75,7 @@
       type: "POST",
       url: 'https://dashboard.manxho.co.in/api/edit_order/',
       headers: {
-        "X-CSRFToken": csrftoken
+        "X-CSRFToken": jQuery("[name=csrfmiddlewaretoken]").val(),
       },
       data: {
         "csrfmiddlewaretoken": $("[name=csrfmiddlewaretoken]").val(),
