--- a/templates/list-upi.html
+++ b/templates/list-upi.html
@@ -84,7 +84,8 @@
       },
       dataType: "json",
       success: function (data) {
-        $('#form2').submit();
+        //$('#form2').submit();
+        console.log(data)
       }
     });
   }
