--- a/templates/list-upi.html
+++ b/templates/list-upi.html
@@ -85,9 +85,7 @@
         },
         dataType: "json",
         success: function (data) {
-          //$('#form2').submit();
-          console.log(data)
-        }
+          $('#form2').submit();
       });
     }
   }
