--- a/templates/base-xyno.html
+++ b/templates/base-xyno.html
@@ -87,7 +87,7 @@
               <li class="nav-item">
                 <a href="/" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
-                  <p>Orders</p>
+                  <p>Confirmed Orders</p>
                 </a>
               </li>
 
@@ -97,6 +97,21 @@
                   <p>UPI Confirmations</p>
                 </a>
               </li>
+
+              <li class="nav-item">
+                <a href="/" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Cancelled Orders</p>
+                </a>
+              </li>
+
+              <li class="nav-item">
+                <a href="/" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Completed Orders</p>
+                </a>
+              </li>
+
 
               <li class="nav-item">
                 <a href="/customers/" class="nav-link">
