--- a/templates/list-orders.html
+++ b/templates/list-orders.html
@@ -33,14 +33,14 @@
         var totalPrice = parseFloat(price) + parseFloat(deliveryPrice);
         // Create table rows
         var row = "<tr><td>Name:</td><td> " + name + "</td></tr><tr><td>Phone: </td><td> " +
-          phone + "</td></tr><tr><td>Email: </td><td> " + email + "</td></tr><tr><td>OrderId: </td><td> " + orderId + "</td></tr>";
+          phone + "</td></tr><tr><td>Email: </td><td> " + email + "</td></tr><tr><td>OrderId: </td><td> " + orderId + "</td></tr><b>";
         for (var i = 0; i < orderItems.length; i++) {
           row += "<b> <tr class='data'><td>" + orderItems[i].name + " </td><td>  Rs. " + orderItems[i].price + "</td></tr> </b>";
         }
         row += "</td></tr><tr><td>Item Price: </td><td> Rs. " + price + "</td></tr><tr><td>Delivery Price: </td><td> Rs. " + deliveryPrice + "</td></tr><tr><td>Total Price: </td><td> Rs. " + totalPrice + "</td></tr>";
 
         // Add rows to table
-        table += row + "</table>";
+        table += row + "</table><br>";
         // Display table in modal
         
         $("#order-modal-body").html(table);
@@ -50,24 +50,7 @@
   }
 
 
-  function deleteOrder(billid) {
-    var result = confirm("Are you sure you want to delete Bill #" + billid + "?");
 
-    if (result) {
-      stuff = {
-        'status': 'Bill Cancelled',
-        'csrfmiddlewaretoken': '{{ csrf_token }}'
-      }
-      $.ajax({
-        type: "POST",
-        url: "/cash-invoice/bill/" + billid + "/",
-        data: stuff,
-        success: function (data) {
-          location.reload();
-        }
-      });
-    }
-  }
 
   $(document).ready(function () {
 
@@ -96,9 +79,9 @@
 
 {% block maindiv %}
 
-<h2>
-  Orders:
-</h2>
+<h3>
+  {{ status }}Orders:
+</h3>
 
 <div>
   <table border="1" style="background-color: white;" id="tblx" class="table table-striped table-bordered">
@@ -154,6 +137,14 @@
 
           </div>
         </form>
+        <select>
+          <option value="dispatched">Dispatched</option>
+          <option value="cancelled">Cancelled</option>
+          <option value="processing">Processing</option>
+          <option value="completed">Completed</option>
+        </select>
+        <span>Courier/Consigment Details:</span>
+        <input id = "courierdata" type = "hidden" value = "" />
 
         <button type="button" class="btn btn-info rightp" onclick=submitform()>Update Order</button>
       </div>
