--- a/templates/list-upi.html
+++ b/templates/list-upi.html
@@ -9,27 +9,6 @@
 
 <script type="text/javascript">
 
-
-  function deleteOrder(billid) {
-    var result = confirm("Are you sure you want to delete Bill #" + billid + "?");
-
-    if (result) {
-      stuff = {
-        'status': 'Bill Cancelled',
-        'csrfmiddlewaretoken': '{{ csrf_token }}'
-      }
-      $.ajax({
-        type: "POST",
-        url: "/cash-invoice/bill/" + billid + "/",
-        data: stuff,
-        success: function (data) {
-          location.reload();
-        }
-      });
-    }
-  }
-
-
   function showmodal(id) {
     $.ajax({
       type: "GET",
@@ -61,7 +40,7 @@
         row += "</td></tr><tr><td>Item Price: </td><td> Rs. " + price + "</td></tr><tr><td>Delivery Price: </td><td> Rs. " + deliveryPrice + "</td></tr><tr><td>Total Price: </td><td> Rs. " + totalPrice + "</td></tr>";
         // Add rows to table
         table += row + "</table>";
-        table += "<br>Transaction ID: <input type='text' id='txid' value='' required /> <input type='hidden' id='oid' value='" + orderId + `'/>  <button type='button' class='btn btn-info rightp' onclick=submitform(${id})>Confirm Payment</button>`;
+        table += "<br>Transaction ID: <input type='text' id='txid' value='' required /> <input type='hidden' id='oid' value='" + orderId + `'/> <br> <button type='button' class='btn btn-info rightp' onclick=submitform(${id})>Confirm Payment</button>`;
         // Display table in modal
         $("#order-modal-body").html(table);
         $("#order-modal").modal("show");
@@ -163,7 +142,7 @@
 
       <!-- Modal Header -->
       <div class="modal-header">
-        <h4 class="modal-title">Edit Info</h4>
+        <h4 class="modal-title">Update Order</h4>
         <button type="button" class="close" data-dismiss="modal">&times;</button>
       </div>
 
