--- a/templates/list-orders.html
+++ b/templates/list-orders.html
@@ -31,6 +31,7 @@
         var price = data.totalPrice;
         var deliveryPrice = data.shippingPrice;
         var totalPrice = parseFloat(price) + parseFloat(deliveryPrice);
+        $("ostatus").val(data.status);
         // Create table rows
         var row = "<tr><td>Name:</td><td> " + name + "</td></tr><tr><td>Phone: </td><td> " +
           phone + "</td></tr><tr><td>Email: </td><td> " + email + "</td></tr><tr><td>OrderId: </td><td> " + orderId + "</td></tr><b>";
@@ -42,7 +43,7 @@
         // Add rows to table
         table += row + "</table><br>";
         // Display table in modal
-        
+
         $("#order-modal-body").html(table);
         $("#order-modal").modal("show");
       }
@@ -63,17 +64,27 @@
       ],
     });
 
+    $("#courier").hide();
+
+    $('#ostatus').change(function () {
+      var selectedValue = $(this).val();
+      if (selectedValue == 'dispatched') {
+        $("#courier").show();
+      }  else {
+        $("#courier").hide();
+      }
+    });
+
 
   });
 </script>
 
 <style>
-
-  .data, .data td {
+  .data,
+  .data td {
     border: 1px solid #444;
   }
-  
-  </style>
+</style>
 
 {% endblock %}
 
@@ -137,14 +148,20 @@
 
           </div>
         </form>
-        <select>
+        <span>Order Status: </span>
+        <select id="ostatus">
+          <option value="order_confirmed">Confirmed</option>
           <option value="dispatched">Dispatched</option>
           <option value="cancelled">Cancelled</option>
           <option value="processing">Processing</option>
           <option value="completed">Completed</option>
         </select>
-        <span>Courier/Consigment Details:</span>
-        <input id = "courierdata" type = "hidden" value = "" />
+        <br>
+        <div id="courier">
+          <span>Courier/Consigment Details:</span>
+          <input id="courierdata" type="hidden" value="" />
+          <br>
+        </div>
 
         <button type="button" class="btn btn-info rightp" onclick=submitform()>Update Order</button>
       </div>
