--- a/templates/list-orders.html
+++ b/templates/list-orders.html
@@ -159,9 +159,10 @@
         <br>
         <div id="courier">
           <span>Courier/Consigment Details:</span>
-          <input id="courierdata" type="hidden" value="" />
+          <input id="courierdata" type="text" value="" />
           <br>
         </div>
+        <br>
 
         <button type="button" class="btn btn-info rightp" onclick=submitform()>Update Order</button>
       </div>
