--- a/templates/list-orders.html
+++ b/templates/list-orders.html
@@ -31,7 +31,7 @@
         var price = data.totalPrice;
         var deliveryPrice = data.shippingPrice;
         var totalPrice = parseFloat(price) + parseFloat(deliveryPrice);
-        $("ostatus").val(data.status);
+        $("#ostatus").val(data.status);
         // Create table rows
         var row = "<tr><td>Name:</td><td> " + name + "</td></tr><tr><td>Phone: </td><td> " +
           phone + "</td></tr><tr><td>Email: </td><td> " + email + "</td></tr><tr><td>OrderId: </td><td> " + orderId + "</td></tr><b>";
