--- a/templates/list-orders.html
+++ b/templates/list-orders.html
@@ -63,7 +63,7 @@
         },
         data: {
           "csrfmiddlewaretoken": $("[name=csrfmiddlewaretoken]").val(),
-          "status": $('#ostatus').val(),
+          "new-status": $('#ostatus').val(),
           "order_id": currid
         },
         dataType: "json",
