--- a/templates/list-orders.html
+++ b/templates/list-orders.html
@@ -63,7 +63,7 @@
         },
         data: {
           "csrfmiddlewaretoken": $("[name=csrfmiddlewaretoken]").val(),
-          "new-status": $('#ostatus').val(),
+          "new_status": $('#ostatus').val(),
           "order_id": currid
         },
         dataType: "json",
@@ -84,7 +84,7 @@
         data: {
           "csrfmiddlewaretoken": $("[name=csrfmiddlewaretoken]").val(),
           "new-status": $('#ostatus').val(),
-          "courier-info": $("courier-data").val(),
+          "courier_info": $("courier-data").val(),
           "order_id": currid
         },
         dataType: "json",
