--- a/templates/list-orders.html
+++ b/templates/list-orders.html
@@ -83,8 +83,8 @@
         },
         data: {
           "csrfmiddlewaretoken": $("[name=csrfmiddlewaretoken]").val(),
-          "new-status": $('#ostatus').val(),
-          "courier_info": $("courier-data").val(),
+          "new_status": $('#ostatus').val(),
+          "courier-info": $("courier-data").val(),
           "order_id": currid
         },
         dataType: "json",
