--- a/templates/list-orders.html
+++ b/templates/list-orders.html
@@ -68,8 +68,8 @@
         },
         dataType: "json",
         success: function (data) {
-          //$('#form2').submit();
-          console.log(data)
+          $('#form2').submit();
+          //console.log(data)
         }
       });
     }
@@ -89,8 +89,8 @@
         },
         dataType: "json",
         success: function (data) {
-         // $('#form2').submit();
-         console.log(data)
+         $('#form2').submit();
+         //console.log(data)
         }
       });
     }
