--- a/templates/base-xyno.html
+++ b/templates/base-xyno.html
@@ -99,14 +99,14 @@
               </li>
 
               <li class="nav-item">
-                <a href="/" class="nav-link">
+                <a href="/cancelled-orders" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Cancelled Orders</p>
                 </a>
               </li>
 
               <li class="nav-item">
-                <a href="/" class="nav-link">
+                <a href="/completed-orders/" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Completed Orders</p>
                 </a>
