--- a/templates/base-xyno.html
+++ b/templates/base-xyno.html
@@ -99,7 +99,7 @@
               </li>
 
               <li class="nav-item">
-                <a href="/cancelled-orders" class="nav-link">
+                <a href="/cancelled-orders/" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Cancelled Orders</p>
                 </a>
