--- a/templates/base-xyno.html
+++ b/templates/base-xyno.html
@@ -128,6 +128,13 @@
               </li>
 
               <li class="nav-item">
+                <a href="/pincodes/" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Pincodes</p>
+                </a>
+              </li>
+
+              <li class="nav-item">
                 <a href="/cash-register/" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Cash Register</p>
