--- a/templates/list-pin.html
+++ b/templates/list-pin.html
@@ -123,7 +123,7 @@
         <td>{{ item.state }}</td>
         <td>{{ item.notes }}</td>
         <td>
-          <button class="btn btn-primary" onclick="showmodal({{ item|pk }})">Edit</button>
+          <button class="btn btn-primary" onclick="showmodal({{ item.id }})">Edit</button>
         </td>
       </tr>
 
