--- a/templates/list-pin.html
+++ b/templates/list-pin.html
@@ -48,7 +48,13 @@
 <h2>
   Pincodes:
 </h2>
-
+<div>
+  <form action="">
+    {% csrf_token %}
+    {{ form }}
+  </form>
+</div>
+<hr/>
 <div>
   <table border="1" style="background-color: white;" id="tblx" class="table table-striped table-bordered">
     <thead>
