--- a/templates/list-pin.html
+++ b/templates/list-pin.html
@@ -52,6 +52,7 @@
   <form action="">
     {% csrf_token %}
     {{ form }}
+    <button type="submit" class="btn btn-secondary">Submit</button>
   </form>
 </div>
 <hr/>
