--- a/templates/list-pin.html
+++ b/templates/list-pin.html
@@ -49,7 +49,7 @@
   Pincodes:
 </h2>
 <div>
-  <form action="">
+  <form action="" method="post">
     {% csrf_token %}
     {{ form }}
     <button type="submit" class="btn btn-secondary">Submit</button>
