--- a/templates/list-orders.html
+++ b/templates/list-orders.html
@@ -31,8 +31,7 @@
         var orderId = data.custom_order_id;
         var orderItems = data.orderItems;
         var price = data.totalPrice;
-        var deliveryPrice = data.shippingPrice;
-        var totalPrice = parseFloat(price) + parseFloat(deliveryPrice);
+        var deliveryPrice = data.shippingPrice;      
         currid = id;
         $("#ostatus").val(data.status);
         // Create table rows
@@ -41,7 +40,7 @@
         for (var i = 0; i < orderItems.length; i++) {
           row += "<b> <tr class='data'><td>" + orderItems[i].name + " </td><td>  Rs. " + orderItems[i].price + "</td></tr> </b>";
         }
-        row += "</td></tr><tr><td>Item Price: </td><td> Rs. " + price + "</td></tr><tr><td>Delivery Price: </td><td> Rs. " + deliveryPrice + "</td></tr><tr><td>Total Price: </td><td> Rs. " + totalPrice + "</td></tr>";
+        row += "</td></tr><tr><td>Delivery Price: </td><td> Rs. " + deliveryPrice + "</td></tr><tr><td>Total Price: </td><td> Rs. " + price + "</td></tr>";
 
         // Add rows to table
         table += row + "</table><br>";
