--- a/templates/list-orders.html
+++ b/templates/list-orders.html
@@ -40,8 +40,7 @@
         for (var i = 0; i < orderItems.length; i++) {
           row += "<b> <tr class='data'><td>" + orderItems[i].name + " </td><td>  Rs. " + orderItems[i].price + "</td></tr> </b>";
         }
-        row += "</td></tr><tr><td>Delivery Price: </td><td> Rs. " + deliveryPrice + "</td></tr><tr><td>Total Price: </td><td> Rs. " + price + "</td></tr>";
-
+        row += "</td></tr><tr><td>Delivery Price: </td><td> Rs. " + deliveryPrice + "</td></tr><tr><td>Coupon Used: </td><td> Rs. " + data.coupon + "</td></tr><tr><td>Total Price paid after discount: </td><td> Rs. " + price + "</td></tr>";
         // Add rows to table
         table += row + "</table><br>";
         // Display table in modal
