--- a/templates/list-orders.html
+++ b/templates/list-orders.html
@@ -160,7 +160,7 @@
         <td>{{ item.created_at }}</td>
         <td>{{ item.user.first_name }} {{ item.user.last_name }}</td>
         <td>{{ item.shippingaddress.phone_number }}</td>
-        <td>{{ item.shippingaddress.address }},<br> {{ item.shippingaddress.city }}, {{ item.shippingaddress.state }}, {{ item.shippingaddress.state.zipcode }}
+        <td>{{ item.shippingaddress.address }},<br> {{ item.shippingaddress.city }}, {{ item.shippingaddress.state }}, {{ item.shippingaddress.zipcode }}
         </td>
         <td>{{ item.status }}</td>
         <td>{{ item.totalPrice }}</td>
