--- a/templates/list-orders.html
+++ b/templates/list-orders.html
@@ -31,14 +31,14 @@
         var orderId = data.custom_order_id;
         var orderItems = data.orderItems;
         var price = data.totalPrice;
-        var deliveryPrice = data.shippingPrice;      
+        var deliveryPrice = data.shippingPrice;
         currid = id;
         $("#ostatus").val(data.status);
         // Create table rows
         var row = "<tr><td>Name:</td><td> " + name + "</td></tr><tr><td>Phone: </td><td> " +
           phone + "</td></tr><tr><td>Email: </td><td> " + email + "</td></tr><tr><td>OrderId: </td><td> " + orderId + "</td></tr><b>";
         for (var i = 0; i < orderItems.length; i++) {
-          row += "<b> <tr class='data'><td><b>Item #"+(i+1)+": </b>" + orderItems[i].name +" Qty: "+ orderItems[i].qty + " </td><td>Price:  Rs. " + orderItems[i].price + "</td></tr> </b>";
+          row += "<b> <tr class='data'><td><b>Item #" + (i + 1) + ": </b>" + orderItems[i].name + " Qty: " + orderItems[i].qty + " </td><td>Price:  Rs. " + orderItems[i].price + "</td></tr> </b>";
         }
         row += "</td></tr><tr><td>Delivery Price: </td><td> Rs. " + deliveryPrice + "</td></tr><tr><td>Coupon Used: </td><td>" + data.coupon + "</td></tr><tr><td>Total Price paid after discount: </td><td> Rs. " + price + "</td></tr>";
         // Add rows to table
@@ -51,8 +51,8 @@
     });
   }
 
-  function submitform(){
-    if ($("#ostatus").val != "dispatched"){
+  function submitform() {
+    if ($("#ostatus").val != "dispatched") {
       $.ajax({
         type: "POST",
         url: 'https://dashboard.manxho.co.in/api/edit_order_status/',
@@ -82,13 +82,13 @@
         data: {
           "csrfmiddlewaretoken": $("[name=csrfmiddlewaretoken]").val(),
           "new_status": $('#ostatus').val(),
-          "courier-info": $("courier-data").val(),
+          "courier-info": $("#courier-data").val(),
           "order_id": currid
         },
         dataType: "json",
         success: function (data) {
-         $('#form2').submit();
-         //console.log(data)
+          $('#form2').submit();
+          //console.log(data)
         }
       });
     }
@@ -114,7 +114,7 @@
       var selectedValue = $(this).val();
       if (selectedValue == 'dispatched') {
         $("#courier").show();
-      }  else {
+      } else {
         $("#courier").hide();
       }
     });
@@ -160,7 +160,8 @@
         <td>{{ item.created_at }}</td>
         <td>{{ item.user.first_name }} {{ item.user.last_name }}</td>
         <td>{{ item.shippingaddress.phone_number }}</td>
-        <td>{{ item.shippingaddress.address }},<br> {{ item.shippingaddress.city }}, {{ item.shippingaddress.state }}, {{ item.shippingaddress.zipcode }}
+        <td>{{ item.shippingaddress.address }},<br> {{ item.shippingaddress.city }}, {{ item.shippingaddress.state }},
+          {{ item.shippingaddress.zipcode }}
         </td>
         <td>{{ item.status }}</td>
         <td>{{ item.totalPrice }}</td>
@@ -189,27 +190,26 @@
         <form id="form2" method="post">
           {% csrf_token %}
           <div id="order-modal-body">
-            
+
 
           </div>
-        </form>
-        <span>Order Status: </span>
-        <select id="ostatus">
-          <option value="order_confirmed">Confirmed</option>
-          <option value="dispatched">Dispatched</option>
-          <option value="cancelled">Cancelled</option>
-          <option value="processing">Processing</option>
-          <option value="completed">Completed</option>
-        </select>
-        <br>
-        <div id="courier">
-          <span>Courier/Consigment Details:</span>
-          <input id="courierdata" type="text" value="" />
+          <span>Order Status: </span>
+          <select id="ostatus">
+            <option value="order_confirmed">Confirmed</option>
+            <option value="dispatched">Dispatched</option>
+            <option value="cancelled">Cancelled</option>
+            <option value="processing">Processing</option>
+            <option value="completed">Completed</option>
+          </select>
           <br>
-        </div>
-        <br>
+          <div id="courier">
+            <span>Courier/Consigment Details:</span>
+            <input id="courierdata" type="text" value="" />
+            <br>
+          </div>
+          <br>
 
-        <button type="button" class="btn btn-info rightp" onclick=submitform()>Update Order</button>
+          <button type="button" class="btn btn-info rightp" onclick=submitform()>Update Order</button>
       </div>
 
     </div>
